设置页面新增了一个 可以切换状态 的设置选项 勾选时候勾选时候立刻打开服务监听 并默认打开 解除勾选时候就stop服务 并默认关闭 更换了app图标以及notification的显示图标

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DaKai_Station</string>
+    <string name="app_name">大开火车</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="SelectFragment_train_id">请输入车次</string>
     <string name="SelectFragment_query">查 询</string>
+
 </resources>
